# hackernews

./: .gitignore  .travis.yml  LICENSE  README.md  circle.yml  default.nix  hackernews.cabal  hackernews.nix  release.nix  shell.nix  stack-ghcjs.yaml  stack.yaml
examples/: Example.hs  Examples.hs  Simple.hs
extras/: hspec-2.3.2.nix  hspec-core-2.3.2.nix  hspec-discover-2.3.2.nix  hspec-expectations-0.8.2.nix  http-api-data-0.3.1.nix  servant-0.9.0.1.nix  servant-client-0.9.0.1.nix
ghc-examples/: Example.hs
ghc-src/Web/: HackerNews.hs
ghc-tests/: Test.hs
ghcjs-src/Web/: HackerNews.hs
ghcjs-tests/: Test.hs
jsbits/: options.js
src/Web/: HackerNews.hs
src/Web/HackerNews/: Client.hs  Comment.hs  Endpoint.hs  Item.hs  Job.hs  Person.hs  Poll.hs  Story.hs  Types.hs  Update.hs  User.hs  Util.hs
tests/: Test.hs
