name:                hackernews
version:             1.0.0.0
description:         API for news.ycombinator.com
license:             MIT
synopsis:            API for Hacker News
license-file:        LICENSE
author:              David Johnson
maintainer:          djohnson.m@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
    README.md

executable example
  main-is: Example.hs
  if impl(ghcjs)
    buildable: False
  hs-source-dirs: examples
  build-depends: base, hackernews, http-client, http-client-tls
  default-language: Haskell2010

executable ghcjs-tests
  main-is: Test.hs
  if !impl(ghcjs)
    buildable: False
  hs-source-dirs: ghcjs-tests
  build-depends: base, hackernews, ghcjs-base
  default-language: Haskell2010

library
  exposed-modules:  Web.HackerNews
  if impl(ghcjs)
    ghcjs-options:  -O2 -Wall -Werror
    hs-source-dirs: ghcjs-src
    build-depends:  aeson
                  , attoparsec
                  , base < 5
                  , ghcjs-base
                  , text
                  , transformers
  else
    ghc-options:  -O2 -Wall -Werror
    hs-source-dirs: src
    build-depends: aeson
                 , base < 5
                 , servant
                 , servant-client
                 , http-client
                 , string-conversions
                 , http-types >= 0.9.1
                 , text
                 , transformers
  default-language:    Haskell2010

Test-Suite tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  main-is: Test.hs
  ghc-options:         -rtsopts -threaded -Wall
  hs-source-dirs:      tests
  build-depends:       aeson
                     , base
                     , basic-sop
                     , generics-sop
                     , hackernews
                     , hspec
                     , http-client-tls
                     , http-client
                     , QuickCheck
                     , quickcheck-instances
                     , servant-quickcheck
                     , transformers

source-repository head
  type:     git
  location: https://github.com/dmjio/hackernews
