name:                hackernews
version:             1.0.0.0
description:         API for news.ycombinator.com
license:             MIT
synopsis:            API for Hacker News
license-file:        LICENSE
author:              David Johnson
maintainer:          djohnson.m@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
    README.md

executable example
  main-is: Example.hs
  default-language: Haskell2010
  if impl (ghcjs)
    build-depends:
        base
      , hackernews == 1.0.*
      , ghcjs-base
    hs-source-dirs: ghcjs-examples
  else
    build-depends:
         base
       , hackernews == 1.0.*
       , http-client-tls
       , http-client
    hs-source-dirs: ghc-examples

executable ghcjs-tests
  main-is: Test.hs
  if impl(ghcjs)
    hs-source-dirs: ghcjs-tests
    build-depends: base
               , hackernews == 1.0.*
               , ghcjs-base
               , hspec
               , hspec-core
               , basic-sop
               , generics-sop
               , quickcheck-instances
               , aeson
                 , QuickCheck
  else
    buildable: False
  default-language: Haskell2010

library
  exposed-modules:  Web.HackerNews
                  , Web.HackerNews.Types
  hs-source-dirs: src
  build-depends: servant == 0.8.*
  if impl(ghcjs)
    ghcjs-options:  -O2 -Wall -Werror
    hs-source-dirs: ghcjs-src
    build-depends:  aeson == 0.9.*
                  , attoparsec == 0.13.*
                  , base < 5
                  , ghcjs-base
                  , string-conversions == 0.4.*
                  , text == 1.2.*
                  , transformers == 0.4.*
  else
    ghc-options:  -O2 -Wall -Werror
    hs-source-dirs: ghc-src
    build-depends: aeson
                 , base < 5
                 , servant-client == 0.8.*
                 , http-client == 0.4.*
                 , string-conversions == 0.4.*
                 , http-types == 0.9.*
                 , text == 1.2.*
                 , transformers == 0.5.*
  default-language:    Haskell2010

Test-Suite ghc-tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  main-is:             Test.hs
  ghc-options:         -rtsopts -threaded -Wall
  hs-source-dirs:      ghc-tests
  build-depends:       aeson
                     , base
                     , basic-sop
                     , generics-sop == 0.2.*
                     , hackernews == 1.0.*
                     , hspec == 2.2.*
                     , http-client-tls == 0.2.*
                     , http-client
                     , QuickCheck == 2.8.*
                     , quickcheck-instances == 0.3.*
                     , transformers

source-repository head
  type:     git
  location: https://github.com/dmjio/hackernews
